z-index temporary fixes
fixes #62

--- a/components/dialog/mdc-dialog.scss
+++ b/components/dialog/mdc-dialog.scss
@@ -1,1 +1,7 @@
 @import "@material/dialog/mdc-dialog";
+
+
+// TODO: MDCFIX
+.mdc-dialog.mdc-dialog--open {
+  z-index: 5;
+}
