--- a/components/fab/mdc-fab.scss
+++ b/components/fab/mdc-fab.scss
@@ -1,1 +1,26 @@
 @import "@material/fab/mdc-fab";
+
+.mdc-fab--absolute {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.mdc-fab--fixed {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 4;
+}
+
+@media(min-width: 1024px) {
+  .mdc-fab--absolute {
+    bottom: 3rem;
+    right: 5rem;
+  }
+
+  .mdc-fab--fixed {
+    bottom: 3rem;
+    right: 5rem;
+  }
+}
