--- a/components/snackbar/mdc-snackbar.scss
+++ b/components/snackbar/mdc-snackbar.scss
@@ -1,2 +1,7 @@
 @import "@material/button/mdc-button";
 @import "@material/snackbar/mdc-snackbar";
+
+// TODO: MDCFIX
+.mdc-snackbar {
+  z-index: 4;
+}
